--- a/style.css
+++ b/style.css
@@ -1,110 +1,109 @@
-body {
-    margin: 0;
-    padding-top: 800px;
+body
+{
+     margin:0;
+     text-align:center;
+
 }
 
-.profile {
-    width: 175px;
-    margin-bottom: 50px;
+.div1
+{
+    padding-top: 150px;
+ 
+}
+
+.pic
+{
+    width:175px;
     border-radius: 50%;
-}
-
-#welcome {
-
-    position: absolute;
-    height: 800px;
-    color: #FFFFFF;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    opacity: 0.83;
-    background: linear-gradient(#60ebeb 0%, #27ae60 100%);
-    display: table;
-    width: 100%;
-    height: 100%;
-    z-index: 9
+    margin-bottom: 50px;
+    margin-top: 50px;
 }
 
 
+.line
+{
+    width:80px;
+    height:6px;
+    background-color:black;
+    margin:8px auto;
+}
 
-h1 {
-
-    font-size: 40px;
-    font-family: sans-serif;
-    font-weight: 300;
+#welcome
+{
+   background:linear-gradient(#bee8f7 0%, #f1f7ed 100%);
+    height:900px;
+    opacity:1;
+ 
+  
     
 }
 
-#name {
-    font-size: 30px;
-    line-height: 1.2;
-    font-family: 'Cinzel Decorative', cursive;
-
+h1
+{
+    font-size:40px;
+    line-height:1.2;
+    font-weight:300;
+    font-family: 'Pirata One', cursive;
 }
 
-h2 {
-    font-size: 30px;
-    font-weight: 300;
-    line-height: 1.2;
-    font-family: monospace
-}
-
-#bio {
-
-    padding: 50px;
-    text-align: center;
-}
-
-.line {
-    height: 6px;
-    background-color: #000;
-    width: 70px;
-    margin: 8px auto;
+h2
+{
+    font-size:30px;
+    line-height:1.0;
+    font-weight:200;
 }
 
 
-p {
-    max-width: 450px;
-    margin: 25px auto;
-    font-size: 17px;
-    line-height: 1.3;
-}
-
-.parallax-inner {
-
-    display: table-cell;
-    position: relative;
-    text-align: center;
-    vertical-align: middle;
+p
+{
+    max-width:450px;
+    margin:25px;
+    line-height:1.3;
+    font-size:17px;
+    margin-left:800px;
+   
 
 }
 
 
 .menu {
-   
     list-style: none;
-    font-family: sans-serif;
-    position:absolute;
-    top:10px;
+    position: fixed;
+    top: 10px;
     right: 30px;
-    z-index: 10;
     cursor: pointer;
+    z-index: 10;
+    
 }
+
+
 
 .links {
     float: left;
-    color: #fff;
+    color: fuchsia;
     padding-top: 5px;
     padding-left: 9px;
     padding-right: 9px;
     padding-bottom: 5px;
-    font-family:fantasy;
+    font-family: fantasy;
     font-size: 20px
+}
+
+.links:hover {
+    background-color: aqua;
 }
 
 
 
-.links:hover {
-    background-color:dodgerblue;
+html {
+    scroll-behavior: smooth;
+}
+
+a {
+    text-decoration: none;
+}
+
+
+.article:hover {
+    color:fuchsia;
 }
